--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,43 @@
-version: '3.8'
+version: '3.8'  # Ensure you specify the Compose file version
+
+networks:
+  app_network:
+    driver: bridge
 
 services:
   nginx:
-    image: nginx:latest
+    image: nginx:alpine
     container_name: nginx
-    volumes:
-      - ./nginx/conf.d:/etc/nginx/conf.d
-      - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
+    restart: unless-stopped
+    tty: true
     ports:
       - "80:80"
       - "443:443"
+    volumes:
+      - ./:/var/www/app
+      - ./nginx/conf.d:/etc/nginx/conf.d/
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
     depends_on:
       - todo-app
-      - certbot
     networks:
-      - webnet
+      - app_network
+    command: >
+      /bin/sh -c "while :; do
+        sleep 6h & wait $${!};
+        nginx -s reload;
+      done & nginx -g 'daemon off;'"
+
+  todo-app:
+    build:
+      context: .  # Ensure this path is correct
+      dockerfile: Dockerfile
+    restart: unless-stopped
+    tty: true
+    ports:
+      - "8000:8000"
+    networks:
+      - app_network
 
   certbot:
     image: certbot/certbot
@@ -23,25 +45,10 @@ services:
     volumes:
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
-    networks:
-      - webnet
-
-  todo-app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: todo-app
-    volumes:
-      - todo-app-data:/app
-    expose:
-      - "8000"
-    networks:
-      - webnet
-
-networks:
-  webnet:
+    depends_on:
+      - nginx
+    command: certonly --webroot --webroot-path=/var/www/certbot --force-renewal --email iamasiwome1@gmail.com --agree-tos --no-eff-email --staging -d todo.auroraverusschool.org -d www.todo.auroraverusschool.org
 
 volumes:
-  todo-app-data:
-
+  certbot-etc:
+  certbot-var:
